load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "db.go",
        "toml.go",
    ],
    importpath = "github.com/tendermint/tendermint/config",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/json",
        "//libs/log",
        "//libs/os",
        "//libs/service",
        "//types",
        "@com_github_tendermint_tm_db//:tm-db",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//visibility:public"],
)

go_test(
    name = "config_test",
    srcs = [
        "config_test.go",
        "toml_test.go",
    ],
    embed = [":config"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
