load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "node",
    srcs = [
        "doc.go",
        "node.go",
        "public.go",
        "setup.go",
    ],
    importpath = "github.com/tendermint/tendermint/node",
    visibility = ["//visibility:public"],
    deps = [
        "//abci/types",
        "//config",
        "//crypto",
        "//internal/blockchain/v0:blockchain",
        "//internal/blockchain/v2:blockchain",
        "//internal/consensus",
        "//internal/evidence",
        "//internal/mempool",
        "//internal/mempool/v0:mempool",
        "//internal/mempool/v1:mempool",
        "//internal/p2p",
        "//internal/p2p/pex",
        "//internal/statesync",
        "//libs/log",
        "//libs/net",
        "//libs/pubsub",
        "//libs/service",
        "//libs/strings",
        "//libs/time",
        "//light",
        "//privval",
        "//privval/grpc",
        "//proto/tendermint/p2p",
        "//proxy",
        "//rpc/core",
        "//rpc/grpc",
        "//rpc/jsonrpc/server",
        "//state",
        "//state/indexer",
        "//state/indexer/sink/kv",
        "//state/indexer/sink/null",
        "//state/indexer/sink/psql",
        "//store",
        "//types",
        "//version",
        "@com_github_lib_pq//:pq",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_rs_cors//:cors",
        "@com_github_tendermint_tm_db//:tm-db",
    ],
)

alias(
    name = "go_default_library",
    actual = ":node",
    visibility = ["//visibility:public"],
)

go_test(
    name = "node_test",
    srcs = ["node_test.go"],
    embed = [":node"],
    deps = [
        "//abci/example/kvstore",
        "//config",
        "//crypto",
        "//crypto/ed25519",
        "//crypto/tmhash",
        "//internal/evidence",
        "//internal/mempool",
        "//internal/mempool/v0:mempool",
        "//internal/test/factory",
        "//libs/log",
        "//libs/rand",
        "//libs/time",
        "//privval",
        "//proxy",
        "//state",
        "//state/indexer",
        "//store",
        "//types",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_tendermint_tm_db//:tm-db",
    ],
)
