load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "privval",
    srcs = [
        "doc.go",
        "errors.go",
        "file.go",
        "msgs.go",
        "retry_signer_client.go",
        "secret_connection.go",
        "signer_client.go",
        "signer_dialer_endpoint.go",
        "signer_endpoint.go",
        "signer_listener_endpoint.go",
        "signer_requestHandler.go",
        "signer_server.go",
        "socket_dialers.go",
        "socket_listeners.go",
        "utils.go",
    ],
    importpath = "github.com/tendermint/tendermint/privval",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/secp256k1",
        "//internal/libs/protoio",
        "//internal/libs/sync",
        "//internal/libs/tempfile",
        "//libs/async",
        "//libs/bytes",
        "//libs/json",
        "//libs/log",
        "//libs/net",
        "//libs/os",
        "//libs/service",
        "//libs/time",
        "//proto/tendermint/crypto",
        "//proto/tendermint/privval",
        "//proto/tendermint/types",
        "//types",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//types",
        "@com_github_libp2p_go_buffer_pool//:go-buffer-pool",
        "@com_github_oasisprotocol_curve25519_voi//primitives/merlin",
        "@org_golang_x_crypto//chacha20poly1305",
        "@org_golang_x_crypto//curve25519",
        "@org_golang_x_crypto//hkdf",
        "@org_golang_x_crypto//nacl/box",
    ],
)

alias(
    name = "go_default_library",
    actual = ":privval",
    visibility = ["//visibility:public"],
)

go_test(
    name = "privval_test",
    srcs = [
        "file_test.go",
        "msgs_test.go",
        "signer_client_test.go",
        "signer_listener_endpoint_test.go",
        "socket_dialers_test.go",
        "socket_listeners_test.go",
        "utils_test.go",
    ],
    embed = [":privval"],
    deps = [
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/tmhash",
        "//libs/json",
        "//libs/log",
        "//libs/net",
        "//libs/rand",
        "//libs/time",
        "//proto/tendermint/crypto",
        "//proto/tendermint/privval",
        "//proto/tendermint/types",
        "//types",
        "@com_github_gogo_protobuf//proto",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
