load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "state",
    srcs = [
        "errors.go",
        "execution.go",
        "metrics.go",
        "services.go",
        "state.go",
        "store.go",
        "tx_filter.go",
        "validation.go",
    ],
    importpath = "github.com/tendermint/tendermint/state",
    visibility = ["//visibility:public"],
    deps = [
        "//abci/types",
        "//crypto/encoding",
        "//internal/libs/fail",
        "//internal/mempool",
        "//libs/log",
        "//libs/math",
        "//libs/os",
        "//libs/time",
        "//proto/tendermint/state",
        "//proto/tendermint/types",
        "//proto/tendermint/version",
        "//proxy",
        "//types",
        "//version",
        "@com_github_go_kit_kit//metrics",
        "@com_github_go_kit_kit//metrics/discard",
        "@com_github_go_kit_kit//metrics/prometheus",
        "@com_github_gogo_protobuf//proto",
        "@com_github_google_orderedcode//:orderedcode",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_tendermint_tm_db//:tm-db",
    ],
)

alias(
    name = "go_default_library",
    actual = ":state",
    visibility = ["//visibility:public"],
)

go_test(
    name = "state_test",
    srcs = [
        "execution_test.go",
        "export_test.go",
        "helpers_test.go",
        "state_test.go",
        "store_test.go",
        "tx_filter_test.go",
        "validation_test.go",
    ],
    embed = [":state"],
    deps = [
        "//abci/types",
        "//config",
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/tmhash",
        "//internal/mempool/mock",
        "//internal/test/factory",
        "//libs/log",
        "//libs/rand",
        "//libs/time",
        "//proto/tendermint/state",
        "//proto/tendermint/types",
        "//proxy",
        "//state/mocks",
        "//state/test/factory",
        "//store",
        "//types",
        "//version",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
        "@com_github_tendermint_tm_db//:tm-db",
    ],
)
