load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "types",
    srcs = [
        "block.go",
        "block_meta.go",
        "canonical.go",
        "encoding_helper.go",
        "errors.go",
        "errors_p2p.go",
        "event_bus.go",
        "events.go",
        "evidence.go",
        "genesis.go",
        "keys.go",
        "light.go",
        "netaddress.go",
        "node_id.go",
        "node_info.go",
        "node_key.go",
        "params.go",
        "part_set.go",
        "priv_validator.go",
        "proposal.go",
        "protobuf.go",
        "results.go",
        "signable.go",
        "signed_msg_type.go",
        "test_util.go",
        "tx.go",
        "utils.go",
        "validation.go",
        "validator.go",
        "validator_set.go",
        "vote.go",
        "vote_set.go",
    ],
    importpath = "github.com/tendermint/tendermint/types",
    visibility = ["//visibility:public"],
    deps = [
        "//abci/types",
        "//crypto",
        "//crypto/batch",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/merkle",
        "//crypto/secp256k1",
        "//crypto/sr25519",
        "//crypto/tmhash",
        "//internal/libs/protoio",
        "//internal/libs/sync",
        "//libs/bits",
        "//libs/bytes",
        "//libs/json",
        "//libs/log",
        "//libs/math",
        "//libs/os",
        "//libs/pubsub",
        "//libs/pubsub/query",
        "//libs/rand",
        "//libs/service",
        "//libs/strings",
        "//libs/time",
        "//proto/tendermint/p2p",
        "//proto/tendermint/types",
        "//version",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//types",
    ],
)

alias(
    name = "go_default_library",
    actual = ":types",
    visibility = ["//visibility:public"],
)

go_test(
    name = "types_test",
    srcs = [
        "block_meta_test.go",
        "block_test.go",
        "canonical_test.go",
        "event_bus_test.go",
        "events_test.go",
        "evidence_test.go",
        "genesis_test.go",
        "light_test.go",
        "netaddress_test.go",
        "node_info_test.go",
        "node_key_test.go",
        "params_test.go",
        "part_set_test.go",
        "proposal_test.go",
        "protobuf_test.go",
        "results_test.go",
        "tx_test.go",
        "validation_test.go",
        "validator_set_test.go",
        "validator_test.go",
        "vote_set_test.go",
        "vote_test.go",
    ],
    embed = [":types"],
    deps = [
        "//abci/types",
        "//crypto",
        "//crypto/ed25519",
        "//crypto/encoding",
        "//crypto/merkle",
        "//crypto/tmhash",
        "//internal/libs/protoio",
        "//internal/libs/test",
        "//libs/bits",
        "//libs/bytes",
        "//libs/json",
        "//libs/math",
        "//libs/net",
        "//libs/pubsub",
        "//libs/pubsub/query",
        "//libs/rand",
        "//libs/time",
        "//proto/tendermint/types",
        "//proto/tendermint/version",
        "//version",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//types",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
