load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "doc.go",
        "grpc_client.go",
        "local_client.go",
        "socket_client.go",
    ],
    importpath = "github.com/tendermint/tendermint/abci/client",
    visibility = ["//visibility:public"],
    deps = [
        "//abci/types",
        "//internal/libs/sync",
        "//internal/libs/timer",
        "//libs/net",
        "//libs/service",
        "@org_golang_google_grpc//:grpc",
    ],
)

alias(
    name = "go_default_library",
    actual = ":client",
    visibility = ["//visibility:public"],
)

go_test(
    name = "client_test",
    srcs = ["socket_client_test.go"],
    deps = [
        ":client",
        "//abci/server",
        "//abci/types",
        "//libs/service",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
