load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "version",
    srcs = ["version.go"],
    importpath = "github.com/tendermint/tendermint/abci/version",
    visibility = ["//visibility:public"],
    deps = ["//version"],
)

alias(
    name = "go_default_library",
    actual = ":version",
    visibility = ["//visibility:public"],
)
