load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "contract_tests_lib",
    srcs = ["main.go"],
    importpath = "github.com/tendermint/tendermint/cmd/contract_tests",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_snikch_goodman//hooks",
        "@com_github_snikch_goodman//transaction",
    ],
)

go_binary(
    name = "contract_tests",
    embed = [":contract_tests_lib"],
    visibility = ["//visibility:public"],
)
