load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "priv_val_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/tendermint/tendermint/cmd/priv_val_server",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/log",
        "//libs/net",
        "//libs/os",
        "//privval",
        "//privval/grpc",
        "//proto/tendermint/privval",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
    ],
)

go_binary(
    name = "priv_val_server",
    embed = [":priv_val_server_lib"],
    visibility = ["//visibility:public"],
)
