load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "secp256k1",
    srcs = [
        "secp256k1.go",
        "secp256k1_nocgo.go",
    ],
    importpath = "github.com/tendermint/tendermint/crypto/secp256k1",
    visibility = ["//visibility:public"],
    deps = [
        "//crypto",
        "//libs/json",
        "@com_github_btcsuite_btcd//btcec",
        "@org_golang_x_crypto//ripemd160",
    ],
)

alias(
    name = "go_default_library",
    actual = ":secp256k1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "secp256k1_test",
    srcs = [
        "secp256k1_internal_test.go",
        "secp256k1_test.go",
    ],
    embed = [":secp256k1"],
    deps = [
        "//crypto",
        "@com_github_btcsuite_btcd//btcec",
        "@com_github_btcsuite_btcutil//base58",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
