load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "xchacha20poly1305",
    srcs = ["xchachapoly.go"],
    importpath = "github.com/tendermint/tendermint/crypto/xchacha20poly1305",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_crypto//chacha20poly1305"],
)

alias(
    name = "go_default_library",
    actual = ":xchacha20poly1305",
    visibility = ["//visibility:public"],
)

go_test(
    name = "xchacha20poly1305_test",
    srcs = [
        "vector_test.go",
        "xchachapoly_test.go",
    ],
    embed = [":xchacha20poly1305"],
)
