load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "consensus",
    srcs = [
        "metrics.go",
        "msgs.go",
        "peer_state.go",
        "reactor.go",
        "replay.go",
        "replay_file.go",
        "replay_stubs.go",
        "state.go",
        "ticker.go",
        "wal.go",
        "wal_generator.go",
    ],
    importpath = "github.com/tendermint/tendermint/internal/consensus",
    visibility = ["//:__subpackages__"],
    deps = [
        "//abci/example/kvstore",
        "//abci/types",
        "//config",
        "//crypto",
        "//crypto/merkle",
        "//internal/consensus/types",
        "//internal/libs/autofile",
        "//internal/libs/clist",
        "//internal/libs/fail",
        "//internal/libs/sync",
        "//internal/mempool",
        "//internal/p2p",
        "//libs/bits",
        "//libs/events",
        "//libs/json",
        "//libs/log",
        "//libs/math",
        "//libs/os",
        "//libs/pubsub",
        "//libs/service",
        "//libs/time",
        "//privval",
        "//privval/grpc",
        "//proto/tendermint/consensus",
        "//proto/tendermint/state",
        "//proto/tendermint/types",
        "//proxy",
        "//state",
        "//store",
        "//types",
        "@com_github_go_kit_kit//metrics",
        "@com_github_go_kit_kit//metrics/discard",
        "@com_github_go_kit_kit//metrics/prometheus",
        "@com_github_gogo_protobuf//proto",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_stretchr_testify//require",
        "@com_github_tendermint_tm_db//:tm-db",
    ],
)

alias(
    name = "go_default_library",
    actual = ":consensus",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "consensus_test",
    srcs = [
        "byzantine_test.go",
        "common_test.go",
        "invalid_test.go",
        "mempool_test.go",
        "msgs_test.go",
        "reactor_test.go",
        "replay_test.go",
        "state_test.go",
        "wal_test.go",
    ],
    embed = [":consensus"],
    tags = ["manual"],
    deps = [
        "//abci/client",
        "//abci/example/code",
        "//abci/example/kvstore",
        "//abci/types",
        "//config",
        "//crypto",
        "//crypto/encoding",
        "//crypto/merkle",
        "//crypto/tmhash",
        "//internal/consensus/types",
        "//internal/evidence",
        "//internal/libs/autofile",
        "//internal/libs/sync",
        "//internal/mempool",
        "//internal/mempool/v0:mempool",
        "//internal/p2p",
        "//internal/p2p/mock",
        "//internal/p2p/p2ptest",
        "//internal/test/factory",
        "//libs/bits",
        "//libs/bytes",
        "//libs/log",
        "//libs/os",
        "//libs/pubsub",
        "//libs/rand",
        "//libs/time",
        "//privval",
        "//proto/tendermint/consensus",
        "//proto/tendermint/state",
        "//proto/tendermint/types",
        "//proxy",
        "//state",
        "//state/mocks",
        "//state/test/factory",
        "//store",
        "//types",
        "@com_github_fortytw2_leaktest//:leaktest",
        "@com_github_gogo_protobuf//proto",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
        "@com_github_tendermint_tm_db//:tm-db",
    ],
)
